--- a/env-python.yaml
+++ b/env-python.yaml
@@ -14,7 +14,7 @@ spec:
   resources: {}
   runtime:
     container:
-      name: ""
+      name: "fission-python-backend"
       resources: {}
     image: fission-python-backend
   version: 3
